# openvino_backend

./: CMakeLists.txt  CODEOWNERS  Dockerfile.drivers  LICENSE  README.md
cmake/: TritonOpenVINOBackendConfig.cmake.in
src/: openvino.cc  openvino_utils.cc  openvino_utils.h
tests/: Makefile  README.md  conftest.py  requirements.txt
tests/configs/: dynamic.pbtxt  dynamic_gpu.pbtxt  ir.pbtxt  ir_gpu.pbtxt  onnx.pbtxt  onnx_gpu.pbtxt  paddle.pbtxt  pb.pbtxt  tflite.pbtxt  tflite_gpu.pbtxt
tests/functional/: common.py  conftest.py  model_config.py  model_download.py  test_loaded_model.py
tests/model_repository/sm/: config.pbtxt
tools/: gen_openvino_dockerfile.py
